-Add new service method, which take care to watch the window screen resize, setting, the layout as one colum in order to avoid content missalign issue. -Add new css for  'fixed-width-info' class, setting the info content centered and with a maximum width.

--- a/src/app/practices/practice.scss
+++ b/src/app/practices/practice.scss
@@ -372,7 +372,9 @@ padding-top: 2px;
 }
 
 .question-information.fixed-width {
-    min-width: 480px;
+    //min-width: 480px;
+    width: 480px;
+    margin: 0px auto;
 }
 .loader-margin{
 
